Enhances portfolio with styling and content
Improves the visual appeal and information provided on the personal portfolio page.

Adds styling for the project placeholders, badges, learning journey list and testimonials to provide a better user experience.

Includes sections for tools used and learning journey to give more context about the developer's skills and experience.

--- a/ARSHA-master/testportfolio/PersonalPortfolio.html
+++ b/ARSHA-master/testportfolio/PersonalPortfolio.html
@@ -31,7 +31,8 @@
             animation: zoomMoveIn 2.80s ease-out forwards;
             font-size: 60px;
         }
-         @keyframes zoomMoveIn {
+
+        @keyframes zoomMoveIn {
             0% {
                 transform: scale(3) translateY(100px);
                 opacity: 0;
@@ -66,7 +67,7 @@
         }
 
         .img-wrapper:hover {
-            box-shadow: 0 8px 30px rgba(0, 0, 0, 0.614);
+            box-shadow: 0 8px 30px rgba(215, 18, 250, 0.255);
             transform: scale(1.05);
             border-radius: 2.4rem;
         }
@@ -85,29 +86,97 @@
 
         .project-placeholder:hover {
             transform: translateY(-5px);
-            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 8px 20px rgba(222, 85, 174, 0.1);
         }
 
+        .project-placeholder:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 12px 25px rgba(255, 170, 170, 0.4);
+            transition: all 0.4s ease;
+        }
+
+
         .card-body {
+            display: flex;
+            flex-direction: column;
             align-items: center;
             justify-content: center;
-            padding: 2.5rem;
+            text-align: center;
         }
-        .card-body h5{
+
+
+        .card-body h5 {
             font-family: Georgia, 'Times New Roman', Times, serif;
             font-size: 20px;
             font-weight: 700;
-            
+
         }
-        .card-text{
+
+        .card-text {
             font-family: Georgia, 'Times New Roman', Times, serif;
             font-size: 22px;
-            
+
         }
 
         footer {
             background-color: #fbeff0;
         }
+
+
+        /* Tools I Use badges styling */
+.badge {
+    font-weight: 600;
+    font-size: 1rem;
+    padding: 0.5em 1em;
+    border-radius: 1rem;
+    transition: background-color 0.3s ease;
+    cursor: default;
+}
+
+.badge:hover {
+    filter: brightness(110%);
+}
+
+/* Learning Journey list style */
+ul {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 18px;
+    line-height: 1.6;
+    color: #555;
+    padding-left: 1.5rem;
+    max-width: 500px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+ul li {
+    margin-bottom: 0.6rem;
+}
+
+/* Testimonials styling */
+h2 {
+    font-weight: 700;
+    margin-bottom: 1rem;
+}
+
+.card.p-3 {
+    background-color: #fff1f3;
+    border-radius: 1.6rem;
+    box-shadow: 0 4px 12px rgba(255, 170, 170, 0.25);
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 18px;
+    color: #5a2a3b;
+}
+
+.card p {
+    margin-bottom: 0.5rem;
+}
+
+.card small {
+    color: #a65a74;
+    font-style: italic;
+}
+
     </style>
 </head>
 
@@ -125,7 +194,28 @@
         <h1>About Me</h1>
         <p>I am an aspiring web developer with a focus on HTML, CSS, and Bootstrap. This portfolio highlights my
             learning journey through practical projects and ongoing development.</p>
+        <div class="container my-5">
+  <h2>Tools I Use</h2>
+  <div class="d-flex flex-wrap gap-3">
+    <span class="badge bg-secondary ">VS Code</span>
+    <span class="badge bg-primary">GitHub</span>
+    <span class="badge bg-info text-dark">Canva</span>
+    <span class="badge bg-warning text-dark">Bootstrap</span>
+    <span class="badge bg-success">Figma</span>
+  </div>
+</div>
+
     </div>
+    <div class="container my-5">
+  <h2>My Learning Journey</h2>
+  <ul>
+    <li>📘 January: Started learning HTML & CSS</li>
+    <li>🎨 February: Created my first personal webpage</li>
+    <li>🧩 March: Built this portfolio using Bootstrap</li>
+    <li>🚀 April: Learned GitHub and hosted projects online</li>
+  </ul>
+</div>
+
 
     <!-- Projects -->
     <div id="projects" class="container my-5">
@@ -146,8 +236,9 @@
                                     <a href="ARSHA-master/webarsha28apr.html" class="btn btn-primary"
                                         target="_blank">View
                                         Project</a>
-                                    <a href="https://github.com/yourusername/ARSHA-master"
-                                        class="btn btn-outline-secondary ms-2" target="_blank">Source Code</a>
+                                    <a href="https://github.com/meenado89/ARSHA" class="btn btn-outline-secondary ms-2"
+                                        target="_blank">Source Code</a>
+
                                 </div>
                             </div>
                         </div>
@@ -166,8 +257,10 @@
                                     <a href="https://meenado89.github.io/ARSHA-master/webarsha28apr.html"
                                         class="btn btn-primary" target="_blank">View
                                         Project</a>
-                                    <a href="https://github.com/meenado89/ARSHA/blob/master/webarsha28apr.html"
-                                        class="btn btn-outline-secondary ms-2" target="_blank">Source Code</a>
+                                    <a href="https://github.com/meenado89/ARSHA" class="btn btn-outline-secondary ms-2"
+                                        target="_blank">Source Code</a>
+
+
                                 </div>
                             </div>
                         </div>
@@ -176,11 +269,25 @@
             </div>
         </div>
     </div>
+      <!-- testimonial -->
+       <div class="container my-5">
+  <h2>What People Say</h2>
+  <div class="card p-3 mb-3">
+    <p>"You have a great eye for design! Can't wait to see more!"</p>
+    <small>– A friend</small>
+  </div>
+  <div class="card p-3">
+    <p>"Your portfolio looks professional and creative. Impressive work!"</p>
+    <small>– Event client</small>
+  </div>
+</div>
+
+
 
     <!-- Contact -->
     <div class="container my-5">
         <h1>Contact</h1>
-        <p>Email: meeankshiemail89@gmail.com</p>
+        <p>Email: meenakshiemail89@gmail.com</p>
         <p>GitHub: <a href="https://github.com/meenado89" target="_blank">github.com/meenado89</a></p>
         <a href="Meenakshi_Resume.pdf" download class="btn btn-outline-dark mt-3">Download Resume (PDF)</a>
 
@@ -197,4 +304,3 @@
 </body>
 
 </html>
-
