--- a/ARSHA-master/testportfolio/mystborn.html
+++ b/ARSHA-master/testportfolio/mystborn.html
@@ -12,7 +12,7 @@
     <style>
         /* navbar */
         #navbar {
-            background: #334b74;
+            background: #cad8f081;
             opacity: 0.9;
             position: fixed;
             z-index: 9999;
@@ -38,7 +38,7 @@
             height: auto;
             position: relative;
             z-index: 1;
-            background: linear-gradient(to left, #6a68b1, #333399);
+            background: linear-gradient(to left, rgba(212, 242, 122, 0.796), #86993389);
             justify-content: center;
             justify-items: center;
             padding-top: 14rem;
