--- a/ARSHA-master/testportfolio/niceadmin2.html
+++ b/ARSHA-master/testportfolio/niceadmin2.html
@@ -528,7 +528,7 @@
         </div>
     </nav>
 
-    <!-- dashboard -->
+    <!-- dashboard looks -->
     <div class="mainpage p-2">
         <div class="heading " style="padding-top: 6rem;">
             <h2><b>
@@ -832,22 +832,24 @@
                                     <div class="activity">
 
                                         <div class="activity-item d-flex">
-                                            <div class="activite-label">32 min</div>
+                                            <div class="activite-label">32 min</div>                                            
+                                           <div class="divider p-0 m-0">
                                             <i class='bx bxs-circle' style='color:#04c800'></i>
+                                            <i class='bx bx-minus bx-rotate-90 bx-lg' style='color:#aaa5a5' ></i>
+                                           </div>
                                             <div class="activity-content">
                                                 Quia quae rerum <a href="#" class="fw-bold text-dark">explicabo
                                                     officiis</a>
                                                 beatae
                                             </div>
-                                        </div><!-- End activity item-->
-
+                                        </div>
                                         <div class="activity-item d-flex">
                                             <div class="activite-label">56 min</div>
                                             <i class='bx bxs-circle' style='color:#c30101'></i>
                                             <div class="activity-content">
                                                 Voluptatem blanditiis blanditiis eveniet
                                             </div>
-                                        </div><!-- End activity item-->
+                                        </div>
 
                                         <div class="activity-item d-flex">
                                             <div class="activite-label">2 hrs</div>
@@ -855,7 +857,7 @@
                                             <div class="activity-content">
                                                 Voluptates corrupti molestias voluptatem
                                             </div>
-                                        </div><!-- End activity item-->
+                                        </div>
 
                                         <div class="activity-item d-flex">
                                             <div class="activite-label">1 day</div>
@@ -864,7 +866,7 @@
                                                 Tempore autem saepe <a href="#" class="fw-bold text-dark">occaecati
                                                     voluptatem</a> tempore
                                             </div>
-                                        </div><!-- End activity item-->
+                                        </div>
 
                                         <div class="activity-item d-flex">
                                             <div class="activite-label">2 days</div>
@@ -872,7 +874,7 @@
                                             <div class="activity-content">
                                                 Est sit eum reiciendis exercitationem
                                             </div>
-                                        </div><!-- End activity item-->
+                                        </div>
 
                                         <div class="activity-item d-flex">
                                             <div class="activite-label">4 weeks</div>
@@ -880,7 +882,7 @@
                                             <div class="activity-content">
                                                 Dicta dolorem harum nulla eius. Ut quidem quidem sit quas
                                             </div>
-                                        </div><!-- End activity item-->
+                                        </div>
 
                                     </div>
                                 </div>
