--- a/ARSHA-master/testportfolio/niceadmin2.html
+++ b/ARSHA-master/testportfolio/niceadmin2.html
@@ -11,7 +11,7 @@
     <title>Nice Admin Template</title>
 
     <style>
-
+           /* almost done need to change z index of offcanvas  */
         /* 29/02:10 */
         /* 28/00:20 */
         /* 26/01:10 */
@@ -173,7 +173,7 @@
                         <!-- Offcanvas Menu -->
                         <div class="main-offcanvas ">
 
-                            <div class="offcanvas offcanvas-start " id="offcanvasExample"
+                            <div class="offcanvas offcanvas-start overflow-x-auto" id="offcanvasExample"
                                 aria-labelledby="offcanvasExampleLabel">
                                 <div class="offcanvas-header ">
                                     <div class="d-flex align-items-center justify-content-between px-3 py-2">
@@ -869,7 +869,7 @@
                             <!-- Recent sales -->
                             <div class="col-12 mb-4">
                                 <div class="card w-100">
-                                    <div class="card-body" style=" height: 25rem; mb-2">
+                                    <div class="card-body mb-2" style=" height: 25rem; ">
                                         <ul class="nav p-0 m-0">
                                             <li class="nav-item">
                                                 <a class="nav-link active" aria-current="page" href="#">
