--- a/ARSHA-master/testportfolio/FstoreTemplate.html
+++ b/ARSHA-master/testportfolio/FstoreTemplate.html
@@ -8,11 +8,101 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <title>Document</title>
+    <title>FashioStore Template</title>
 </head>
 
 <body>
+    <header>
 
+
+        <!-- topnavHeading -->
+        <nav class="navbar navbar-light bg-light">
+            <div class="container-fluid">
+                <div class="container">
+                    <div class="row">
+                        <!-- start -->
+                        <div class="col-6 ">
+                            <div class="contactheader d-flex">
+                                <i class='bx bxs-phone bx-sm pt-2 p-2'></i>
+                                <p class="navbar-brand mb-0 h1 fw-normal">Customer Support: <span
+                                        style="color: #8c0d4f;">+1
+                                        (234) 567-890</span></p>
+
+                                <div class="mailheader d-flex">
+                                    <i class='bx bx-envelope bx-sm pt-2 p-2'></i>
+                                    <p class="navbar-brand mb-0 h1 fw-normal" style="color: #8c0d4f;">
+                                        support@example.com</span></p>
+                                </div>
+                            </div>
+
+
+                        </div>
+                        <!-- end -->
+                        <div class="col-6 ">
+                            <div class="trackheader d-flex">
+                                <i class='bx bxs-truck bx-sm pt-1 p-2'></i>
+                                <p class="navbar-brand mb-0 h1 fw-normal" style="color: #8c0d4f;"> Track Order</p>
+                                <div class="languageheader d-flex">
+                                    <i class='bx bx-comment-dots bx-sm pt-2 p-2'></i>
+                                    <p class="navbar-brand mb-0 h1 fw-normal" style="color: #8c0d4f;">English</p>
+                                    <!-- creat drop -->
+
+                                </div>
+
+                                <div class="trackheader d-flex">
+                                    <div class="languageheader d-flex">
+                                        <i class='bx bx-dollar bx-sm pt-2 p-2'></i>
+                                        <p class="navbar-brand mb-0 h1 fw-normal" style="color: #8c0d4f;">USD</p>
+                                        <!-- creat drop -->
+
+                                    </div>
+                                </div>
+                            </div>
+
+
+
+
+                        </div>
+
+
+                    </div>
+                </div>
+            </div>
+
+        </nav>
+
+        <!-- NAVBAR -->
+        <nav class="navbar navbar-light bg-light">
+            <div class="container-fluid">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-6">
+                            <a class="navbar-brand fw-bolder gap-0 m-0 p-0">
+                                <h1>Fashion <span style="color: #8c0d4f;">Store</span> </h1>
+                            </a>
+                            
+                        </div>
+                        <div class="col-6">
+                            <form class="d-flex">
+                                <i class='bx bx-search bx-md' ></i>
+                                <!-- when clicked box opens below vertical scroll -->
+                                <!-- <input class="form-control me-2 " type="search" placeholder="Search" aria-label="Search"> -->
+                                <!-- <button class="btn btn-outline-success" type="submit">Search</button> -->
+                            </form>
+
+                            <!-- account -->
+                            <a class="navbar-brand fw-bolder gap-0 m-0 p-0">
+                                <i class='bx bx-user' ></i>
+                                <p>Account</p>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </nav>
+
+
+    </header>
 
 
 
