--- a/ARSHA-master/testportfolio/ProfilePortfolio.html
+++ b/ARSHA-master/testportfolio/ProfilePortfolio.html
@@ -6,9 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portfolio</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-    
-           <!-- 27-04:49 -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
+    <!-- 27-04:49 -->
     <!-- 26-01:40am,26/15:40pm -->
     <style>
         body {
@@ -126,59 +129,96 @@
 
 
         /* Tools I Use badges styling */
-.badge {
-    font-weight: 600;
-    font-size: 1rem;
-    padding: 0.5em 1em;
-    border-radius: 1rem;
-    transition: background-color 0.3s ease;
-    cursor: default;
-}
+        .badge {
+            font-weight: 600;
+            font-size: 1rem;
+            padding: 0.5em 1em;
+            border-radius: 1rem;
+            transition: background-color 0.3s ease;
+            cursor: default;
+        }
 
-.badge:hover {
-    filter: brightness(110%);
-}
+        .badge:hover {
+            filter: brightness(110%);
+        }
 
-/* Learning Journey list style */
-ul {
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: 18px;
-    line-height: 1.6;
-    color: #555;
-    padding-left: 1.5rem;
-    max-width: 500px;
-    margin-left: auto;
-    margin-right: auto;
-}
+        /* Learning Journey list style */
+        .timeline {
+            position: relative;
+            margin: 0 auto;
+            padding-left: 20px;
+            border-left: 3px solid #f78fb3;
+        }
 
-ul li {
-    margin-bottom: 0.6rem;
-}
+        .timeline-item {
+            position: relative;
+            margin-bottom: 30px;
+            padding-left: 20px;
+        }
 
-/* Testimonials styling */
-h2 {
-    font-weight: 700;
-    margin-bottom: 1rem;
-}
+        .timeline-dot {
+            position: absolute;
+            left: -13px;
+            top: 0;
+            background: #fff;
+            border: 3px solid #f78fb3;
+            border-radius: 50%;
+            width: 35px;
+            height: 35px;
+            text-align: center;
+            line-height: 19px;
+            font-size: 16px;
 
-.card.p-3 {
-    background-color: #fff1f3;
-    border-radius: 1.6rem;
-    box-shadow: 0 4px 12px rgba(255, 170, 170, 0.25);
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: 18px;
-    color: #5a2a3b;
-}
+        }
 
-.card p {
-    margin-bottom: 0.5rem;
-}
+        .timeline-content h5 {
+            margin: 0 0 5px;
+            font-weight: 600;
+        }
 
-.card small {
-    color: #a65a74;
-    font-style: italic;
-}
+        .timeline-content p {
+            margin: 0;
+            font-size: 0.95rem;
+            color: #555;
+        }
 
+
+        ul li {
+            margin-bottom: 0.6rem;
+        }
+
+        /* Testimonials styling */
+        h2 {
+            font-weight: 700;
+            margin-bottom: 1rem;
+        }
+
+        .card.p-3 {
+            background-color: #fff1f3;
+            border-radius: 1.6rem;
+            box-shadow: 0 4px 12px rgba(255, 170, 170, 0.25);
+            font-family: Georgia, 'Times New Roman', Times, serif;
+            font-size: 18px;
+            color: #5a2a3b;
+        }
+
+        .card p {
+            margin-bottom: 0.5rem;
+        }
+
+        .card small {
+            color: #a65a74;
+            font-style: italic;
+
+        }
+
+        /* testimoneal */
+        .carousel-item {
+            align-items: center;
+            justify-content: center;
+            justify-items: center;
+
+        }
     </style>
 </head>
 
@@ -194,35 +234,77 @@ h2 {
     <!-- About Me -->
     <div class="container my-5">
         <h1>About Me</h1>
-        <p>I am an aspiring web developer with a focus on HTML, CSS, and Bootstrap. This portfolio highlights my
-            learning journey through practical projects and ongoing development.</p>
+        <p class="pt-3">I'm learning web development with a focus on HTML, CSS, and Bootstrap. This portfolio is where I
+            share the projects I’ve worked on while exploring design, structure, and interactivity. I enjoy building
+            simple, thoughtful layouts and growing my skills one step at a time.</p>
         <div class="container my-5">
-  <h2>Tools I Use</h2>
-  <div class="d-flex flex-wrap gap-3">
-    <span class="badge bg-secondary ">VS Code</span>
-    <span class="badge bg-primary">GitHub</span>
-    <span class="badge bg-info text-dark">Canva</span>
-    <span class="badge bg-warning text-dark">Bootstrap</span>
-    <span class="badge bg-success">Figma</span>
-  </div>
-</div>
+            <h2>Tools I Use</h2>
+            <div class="d-flex flex-wrap gap-3">
+                <span class="badge bg-secondary ">VS Code</span>
+                <span class="badge bg-primary">GitHub</span>
+                <span class="badge bg-info text-dark">Canva</span>
+                <span class="badge bg-warning text-dark">Bootstrap</span>
+                <span class="badge bg-success">Figma</span>
+            </div>
+        </div>
 
     </div>
+    <!-- Learning Journey Section -->
     <div class="container my-5">
-  <h2>My Learning Journey</h2>
-  <ul>
-    <li>📘 January: Started learning HTML & CSS</li>
-    <li>🎨 February: Created my first personal webpage</li>
-    <li>🧩 March: Built this portfolio using Bootstrap</li>
-    <li>🚀 April: Learned GitHub and hosted projects online</li>
-  </ul>
-</div>
+        <h2 class=" mb-4">My Learning Journey</h2>
+        <div class="timeline pt-4">
+            <div class="timeline-item">
+                <div class="timeline-dot py-1"><i class='bx bxl-html5 bx-sm'></i></div>
+                <div class="timeline-content ps-3">
+                    <h5>April/01/2025</h5>
+                    <p>Started learning HTML & CSS</p>
+                </div>
+            </div>
+            <div class="timeline-item">
+                <div class="timeline-dot py-1"><i class='bx bx-code bx-sm'></i></div>
+                <div class="timeline-content ps-3">
+                    <h5>April/07/2025</h5>
+                    <p>Created my first personal webpage</p>
+                </div>
+            </div>
+            <div class="timeline-item">
+                <div class="timeline-dot py-1"><i class='bx bxl-github bx-sm'></i></div>
+                <div class="timeline-content ps-3">
+                    <h5>April/27/2025</h5>
+                    <p>Learned GitHub and hosted projects online</p>
+                </div>
+            </div>
+            <div class="timeline-item">
+                <div class="timeline-dot py-1"><i class='bx bxl-bootstrap bx-sm' undefined></i></div>
+                <div class="timeline-content ps-3">
+                    <h5>may/18/2025</h5>
+                    <p>Built this portfolio using Bootstrap</p>
+                </div>
+            </div>
+
+            <div class="timeline-item">
+                <div class="timeline-dot py-1"><i class='bx bxl-bootstrap bx-sm' undefined></i></div>
+                <div class="timeline-content ps-3">
+                    <h5>April/27/2025</h5>
+                    <p>created template similar to Arsha Bootstrapmade</p>
+                </div>
+            </div>
+            <div class="timeline-item">
+                <div class="timeline-dot py-1"><i class='bx bxl-bootstrap bx-sm' undefined></i></div>
+                <div class="timeline-content ps-3">
+                    <h5>April/29/2025</h5>
+                    <p>created template similar to nice Bootstrapmade</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
 
     <!-- Projects -->
     <div id="projects" class="container my-5">
         <h1>Projects</h1>
-        <div class="container-fluid">
+        <div class="container-fluid pt-3">
             <div class="container">
                 <div class="row g-4">
                     <div class="col-6">
@@ -248,11 +330,12 @@ h2 {
                     </div>
                     <div class="col-6">
                         <div class="img-wrapper">
-                            <img src="bpthumb.png" class="card-img-top" alt="Portfolio Screenshot">
+                            <img src="niceaadmintemp.jpeg" class="card-img-top" alt="Portfolio Screenshot"
+                                height="285px">
                         </div>
                         <div class="project-placeholder ">
                             <div class="card-body">
-                                <h5 class="card-title px-5">Portfolio Website (Arsha Theme)</h5>
+                                <h5 class="card-title px-5">Portfolio Website (Nice Admin Theme)</h5>
                                 <p class="card-text">A customized webpage built with Bootstrap 5.
                                 </p>
                                 <div class="card-buttons p-1 px-5">
@@ -271,37 +354,102 @@ h2 {
             </div>
         </div>
     </div>
-      <!-- testimonial -->
-       <div class="container my-5">
-  <h2>What People Say</h2>
-  <div class="card p-3 mb-3">
-    <p>"You have a great eye for design! Can't wait to see more!"</p>
-    <small>– A friend</small>
-  </div>
-  <div class="card p-3">
-    <p>"Your portfolio looks professional and creative. Impressive work!"</p>
-    <small>– Event client</small>
-  </div>
-</div>
+    <!-- testimonial -->
+    <div class="container my-5">
+        <h2>What People Say</h2>
+
+        <div id="carouselExampleIndicators" class="carousel slide pt-3" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="smile.jpg" class="d-block mb-3 " alt="friend"
+                        style="height: 10rem; width: 10rem; border-radius: 50%;">
+                    <div class=" testimoneal-container  justify-content-center p-3 mb-3">
+
+                        <p>"You have a great eye for design! Can't wait to see more!"</p>
+                        <small>– A friend</small>
+                    </div>
+
+                </div>
+
+                <div class="carousel-item ">
+                    <img src="thumb-smile.jpg" class=" d-block mb-3 " alt=""
+                        style="height: 10rem; width: 10rem; border-radius: 50%; ">
+                    <div class=" p-3 mb-3">
+
+                        <p>"Your portfolio looks professional and creative. Impressive work!"</p>
+                        <small>– Event client</small>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="happy.jpg" class="d-block mb-3" alt=""
+                        style="height: 10rem; width: 10rem; border-radius: 50%;">
+                    <div class=" p-3 mb-3">
+
+                        <p>"Your portfolio looks professional and creative. Impressive work!"</p>
+                        <small>– Event client</small>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+
+
+
+
+    </div>
 
 
 
     <!-- Contact -->
     <div class="container my-5">
         <h1>Contact</h1>
-        <p>Email: meenakshiemail89@gmail.com</p>
+        <p class="pt-3">Email: meenakshiemail89@gmail.com</p>
         <p>GitHub: <a href="https://github.com/meenado89" target="_blank">github.com/meenado89</a></p>
         <a href="Meenakshi_Resume.pdf" download class="btn btn-outline-dark mt-3">Download Resume (PDF)</a>
 
     </div>
+    <hr>
 
     <!-- Footer -->
-    <footer class="text-center py-3">
-        <small>© 2025 MEEENAKSHI</small>
+    <footer class="text-center py-4" style="background-color: #ffeef2; color: #444;">
+        <div class="container">
+            <p class="mb-1 fw-semibold">Designed & Developed by Meenakshi</p>
+            <p class="small mb-2">HTML • CSS • Bootstrap</p>
+            <div>
+
+                <a href="mailto:meeankshiemail89@gmail.com" class="text-decoration-none me-3 text-dark">📧 Email</a>
+                <a href="https://github.com/meenado89" target="_blank" class="text-decoration-none me-3 text-dark"><i
+                        class='bx bxl-github'></i> GitHub</a>
+                <a href="Meenakshi_Resume.pdf" download class="text-decoration-none text-dark"><i
+                        class='bx bxs-spreadsheet'></i> Resume</a>
+            </div>
+            <hr style="margin: 1rem auto; width: 60%; opacity: 0.4;">
+            <p class="small text-muted">© 2025 Meenakshi. All rights reserved.</p>
+        </div>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
+    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 
 </body>
 
