--- a/ARSHA-master/testportfolio/ProfilePortfolio.html
+++ b/ARSHA-master/testportfolio/ProfilePortfolio.html
@@ -10,7 +10,7 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-
+     <!-- 29 10:25 -->
     <!-- 27-04:49 -->
     <!-- 26-01:40am,26/15:40pm -->
     <style>
@@ -212,7 +212,7 @@
 
         }
 
-        /* testimoneal */
+        /* testimonials */
         .carousel-item {
             align-items: center;
             justify-content: center;
@@ -430,7 +430,7 @@
     <!-- Footer -->
     <footer class="text-center py-4" style="background-color: #ffeef2; color: #444;">
         <div class="container">
-            <p class="mb-1 fw-semibold">Designed & Developed by Meenakshi</p>
+            <p class="mb-1 fw-semibold">Designed & Developed by Meenaskhi</p>
             <p class="small mb-2">HTML • CSS • Bootstrap</p>
             <div>
 
