--- a/ARSHA-master/index.html
+++ b/ARSHA-master/index.html
@@ -1480,7 +1480,7 @@
         </div>
     </div>
 
-    <!--portfolio  ADD LINKS-->
+    <!--portfolio -->
     <div class="portfoliomcontainer p-5" id="portfolio">
         <div class="container-fluid">
             <div class="container" style="padding-top: 6rem;">
