--- a/ARSHA-master/testportfolio/dontsave.html
+++ b/ARSHA-master/testportfolio/dontsave.html
@@ -3,244 +3,114 @@
 
 <head>
     <meta charset="UTF-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <title>Simple Donut Chart</title>
     <style>
-        /* Navbar */
-        body {
-            background-color: aliceblue;
+         /* brand-carousel */
+
+        .brandcarousel-container {
+            background-color: #f5f6f8;
+            overflow: hidden;
+            padding: 0;
+            height: 3rem;
+            background-color: #8c0d4f;
+            flex-direction: column;
         }
 
-        .navbar {
-            background-color: white;
-            position: fixed;
-            width: 100%;
-            z-index: 1000;
-            padding: 0.5rem 1rem;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        }
-
-        .navbar-text {
-            color: #012970;
+        .brandcarousel-track {
+            justify-content: center;
+            align-items: center;
+            justify-items: center;
+            display: flex;
+            /* animation: slide 20s steps(4) ; */
+            animation: stepScroll 3s steps(4) infinite;
+            gap: 5rem;
             font-size: 24px;
-            font-weight: 800;
-            margin-left: 0.5rem;
+            color: white;
+            margin-bottom: 1rem;
+            overflow: hidden;
         }
 
-        .navbar-logo img {
-            vertical-align: middle;
+        .brandcarousel-track .vertical {
+            margin: 0;
+            padding: 0;
         }
 
-        #adminimg img {
-            border-radius: 50%;
-            object-fit: cover;
+        .brandcarousel-track p {
+            margin: 0;
+            padding: 0.3rem 0;
+            height: 3rem;
+            line-height: 3rem;
+            font-size: 18px;
+            }
+
+
+        .brandcarousel-track img {
+            height: 38px;
+            transition: all 0.1s ease-in-out;
         }
 
-
-
-
-        /* colour dougnut  */
-        /* web traffic */
-        .donut-chart {
-            width: 250px;
-            height: 250px;
-            border-radius: 50%;
-            background: conic-gradient(#00eaff 0% 20%,
-                    #2f00ff 0% 40%,
-                    #1cc88a 0% 65%,
-                    #f6c23e 65% 85%,
-                    #e74a3b 85% 100%);
-            position: relative;
-            margin: 20px auto;
+        .brandcarousel-track img:hover {
+            transform: scale(1.05);
+            cursor: pointer;
         }
 
-        .donut-chart::before {
-            content: "";
-            position: absolute;
-            top: 25%;
-            left: 25%;
-            width: 50%;
-            height: 50%;
-            background: white;
-            border-radius: 50%;
+        .brandcarousel-container:hover .brandcarousel-track {
+            animation-play-state: paused;
         }
 
-        .legend {
-            text-align: center;
-            font-family: sans-serif;
+        @keyframes stepScroll {
+            0% {
+                transform: translateY(0);
+            }
+
+            100% {
+                transform: translateY(-160%);
+            }
         }
 
-        .legend div {
-            margin: 5px;
-        }
-
-        .box {
-            display: inline-block;
-            width: 12px;
-            height: 12px;
-            margin-right: 5px;
-        }
-
-        .search {
-            background: #4e73df;
-        }
-
-        .direct {
-            background: #1cc88a;
-        }
-
-        .email {
-            background: #f6c23e;
-        }
-
-        .union {
-            background: #e74a3b;
+        .brand-wrapper {
+            overflow: hidden;
+            cursor: pointer;
+            /* pause on hover */
         }
     </style>
 </head>
 
 <body>
 
-    <!-- navBar in three diffrent divs-->
-    <nav class="navbar">
-        <div class="container-fluid">
-            <div class="row align-items-center w-100">
-                <!-- Logo -->
-                <div class="col-3 d-flex align-items-center">
-                    <div class="navbar-logo d-flex align-items-center">
-                        <img src="adminlogo.png" alt="adminlogo" height="35" />
-                        <span class="navbar-text">Nice Admin</span>
-                    </div>
+     <!-- Brand carousel -->
+    <div class="brandcarousel-container">
+        <div class="brand-wrapper">
+            <div class="brandcarousel-track ">
+                <!-- First set of logos -->
+                <div class="vertical ">
+                    <p><i class='bx bx-gift' style='color:#e5ff00'></i>Flash Sale Upto 70% off on selected items</p>
+                    <p><i class='bx bxs-truck bx-sm' style='color:#e5ff00'></i>free shipping on oders over $50</p>
+                    <p> <i class='bx bx-money-withdraw bx-sm' style=' color:#e5ff00'></i>30 Day Money Back Guarantee</p>
+                    <p><i class='bx bx-credit-card bx-sm' style='color:#e5ff00'></i>20% off on your first order use
+                        code- 20 OFF</p>
+                    <!--  logo Repeat-->
+
+                    <p><i class='bx bx-gift' style='color:#e5ff00'></i>Flash Sale Upto 70% off on selected items</p>
+                    <p><i class='bx bxs-truck bx-sm' style='color:#e5ff00'></i>free shipping on oders over $50</p>
+                    <p> <i class='bx bx-money-withdraw bx-sm' style=' color:#e5ff00'></i>30 Day Money Back Guarantee</p>
+                    <p><i class='bx bx-credit-card bx-sm' style='color:#e5ff00'></i>20% off on your first order use
+                        code- 20 OFF</p>
                 </div>
 
-                <!-- Menu Button -->
-                <div class="col-auto  ">
-                    <a class="btn" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button"
-                        aria-controls="offcanvasExample">
-                        <i class="bx bx-menu bx-md text-dark"></i>
-                    </a>
-
-                    <!-- Offcanvas Menu -->
-                    <div class="main-offcanvas ">
-
-                        <div class="offcanvas offcanvas-start " id="offcanvasExample"
-                            aria-labelledby="offcanvasExampleLabel">
-                            <div class="offcanvas-header ">
-                                <div class="d-flex align-items-center justify-content-between px-3 py-2">
-                                    <div class="d-flex align-items-center gap-2">
-                                        <i class='bx bx-grid-alt ' style='color:#0907f7'></i>
-
-                                        Dropdown
-                                    </div>
-
-                                </div>
-
-                            </div>
-                            <div class="offcanvas-body">
-
-                                <div class="dropdown mt-3">
-                                    <div class="d-flex align-items-center justify-content-between px-3 py-2">
-                                        <div class="d-flex align-items-center gap-2">
-                                            <i class='bx bxs-food-menu' style='color:#0907f7'></i>
-                                            <a class="btn p-0" data-bs-toggle="collapse" href="#collapseExample"
-                                                role="button" aria-expanded="false" aria-controls="collapseExample">
-                                                Components <i class='bx bx-chevron-down position-relative'
-                                                    style='color:#707070 ; left: 5rem;'></i>
-                                            </a>
-                                        </div>
-
-                                    </div>
-
-                                    <div class="collapse" id="collapseExample">
-                                        <div class="card card-body w-50 border-0">
-                                            <ul>
-                                                <li>gcjhgj</li>
-                                                <li>m m mn m</li>
-                                                <li>dvcxvc</li>
-                                                <li>cvcxvdsdsdfc</li>
-                                                <li>vsdsf</li>
-                                                <li>fsdfsdc</li>
-                                                <li>dvdsfdf</li>
-                                                <li>bhmj,m</li>
-                                                <li>vvnmhnb</li>
-                                                <li>vb bbb</li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
-
-
-                            </div>
-
-                            <!-- forms -->
-
-                        </div>
-                    </div>
-                </div>
-                <!-- Search -->
-                <div class="col-3 d-flex ">
-                    <form class="position-relative width-40">
-                        <input class="form-control pe-5" type="search" placeholder="Search" />
-                        <i class="bx bx-search position-absolute top-50 end-0 translate-middle-y pe-3 text-muted"></i>
-                    </form>
-                </div>
-
-
-                <!-- Notification & Messages -->
-                <div class="col-2 d-flex justify-content-end align-items-center gap-3">
-                    <!-- Bell Dropdown -->
-                    <div class="dropdown">
-                        <a class="text-decoration-none text-dark dropdown-toggle" href="#" id="notifDropdown"
-                            data-bs-toggle="dropdown">
-                            <i class="bx bx-bell bx-md"></i>
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="notifDropdown">
-                            <li><a class="dropdown-item" href="#">Notification 1</a></li>
-                            <li><a class="dropdown-item" href="#">Notification 2</a></li>
-                        </ul>
-                    </div>
-
-                    <!-- Message Dropdown -->
-                    <div class="dropdown">
-                        <a class="text-decoration-none text-dark dropdown-toggle" href="#" id="msgDropdown"
-                            data-bs-toggle="dropdown">
-                            <i class="bx bx-message-square-detail bx-md"></i>
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="msgDropdown">
-                            <li><a class="dropdown-item" href="#">Message 1</a></li>
-                            <li><a class="dropdown-item" href="#">Message 2</a></li>
-                        </ul>
-                    </div>
-                </div>
-
-                <!-- Profile -->
-                <div class="col-md-3 d-flex justify-content-end align-items-center gap-2" id="adminimg">
-                    <img src="adminprofile-img.jpg" alt="adminimg" width="48" height="48" />
-                    <div class="dropdown">
-                        <button class="btn dropdown-toggle" type="button" id="profileDropdown"
-                            data-bs-toggle="dropdown">
-                            K. Anderson
-                        </button>
-                        <ul class="dropdown-menu" aria-labelledby="profileDropdown">
-                            <li><a class="dropdown-item" href="#">Profile</a></li>
-                            <li><a class="dropdown-item" href="#">Settings</a></li>
-                            <li><a class="dropdown-item" href="#">Logout</a></li>
-                        </ul>
-                    </div>
-                </div>
             </div>
         </div>
-    </nav>
-
-    <!-- colour dougnut -->
-    <div class="donut-chart"></div>
-
-    <div class="legend">
-        <div><span class="box search"></span> Search Engine</div>
-        <div><span class="box direct"></span> Direct</div>
-        <div><span class="box email"></span> Email</div>
-        <div><span class="box union"></span> Union Ads</div>
     </div>
 
+
+     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
