--- a/ARSHA-master/testportfolio/quote.html
+++ b/ARSHA-master/testportfolio/quote.html
@@ -15,7 +15,7 @@
 <div class="container">
     <h1>Random Quote Generator</h1>
     <div class="quote-box">
-      <p id="quote">Click the button to get a quote!</p>
+      <p id="quote">Click For quote!</p>
       <p id="author"></p>
     </div>
     <button id="generate-btn">Generate Quote</button>
