--- a/ARSHA-master/testportfolio/claculatorB.html
+++ b/ARSHA-master/testportfolio/claculatorB.html
@@ -10,6 +10,8 @@
 
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <style>
+         /* 7/6/01:15 */
+
         body {
             background-color: rgba(174, 172, 2, 0.143);
             display: flex;
@@ -92,7 +94,9 @@
                 style="height: 3rem; width: 14rem;">
 
             <!-- result -->
-            <h2 class="result text-white mb-5"><b>Result</b></h2>
+            <div class="result-container" style="width: 17rem;height: auto; ">
+                <h2 class="result text-white mb-5"><b>Result:</b></h2>
+            </div>
             <!-- button -->
             <button onclick="calculate('+')" id="btn">+</button>
             <button onclick="calculate('-')" id="btn">-</button>
