--- a/ARSHA-master/testportfolio/calculatorB.html
+++ b/ARSHA-master/testportfolio/calculatorB.html
@@ -99,6 +99,19 @@
                 else if (operator === "%") result = n1 % n2;
             }
 
+            //  if (isNaN(n1) || isNaN(n2)) {
+            //     result = "Enter both numbers!";
+            // } else {
+            //    switch(operator){
+            //     case "+":result=n1+n2;
+            //     break;
+            //     case "-":result=n1-n2;
+            //     break;
+            //     default:result="Invalid input"
+            //     break;
+            //    }
+            // }
+
             document.getElementsByClassName('result')[0].innerText = "Result: " + result;
 
 
@@ -112,7 +125,7 @@
         }
 
 
-
+  
     </script>
 
 
