--- a/ARSHA-master/testportfolio/widthdemo.html
+++ b/ARSHA-master/testportfolio/widthdemo.html
@@ -19,11 +19,11 @@
 <body>
 
    <script>
-      //   for(let i=10;i>=0;i--){
-      //    if(i===5||i==6){continue}
+        for(let i=10;i>=0;i**){
+         if(i===5||i==6){continue}
 
-      //      document.writeln(i)
-      //   }
+           document.writeln(i)
+        }
 
       let arr = [1, 2.2]
       for(let b=0;b<arr.length;b++){
@@ -35,17 +35,17 @@
       //    i++;
       // }
 
-      let a = 0;
-      do{
-         document.writeln(a)
-         a++;
-      } while(a<=21)
+   //    let a = 0;
+   //    do{
+   //       document.writeln(a)
+   //       a++;
+   //    } while(a<=21)
      
-     let a = 0;
-      while (a <= 10) {
-         document.writeln(a)
-         a++;
-      }
+   //   let a = 0;
+   //    while (a <= 10) {
+   //       document.writeln(a)
+   //       a++;
+   //    }
 
 
 
