--- a/ARSHA-master/testportfolio/calculatorA.html
+++ b/ARSHA-master/testportfolio/calculatorA.html
@@ -58,7 +58,7 @@
         <div class="card">
             <div class="card-body">
                 <h2 class="card-title text-white pb-1 px-4">Calculator</h2>
-                <label type="number" ></label>
+                <label for="number1" ></label>
                 <div class="dropdown">
                     <select id="number1" onchange="calculate()" style="width: 12rem; height: 2rem;">
                         <option value="1">1</option>
@@ -77,7 +77,7 @@
                 </div>
 
                 <!-- second -->
-                <label type="number"></label>
+                <label for="number2"></label>
                 <div class="dropdown  ">
                     <select id="number2" onchange="calculate()" style="width: 12rem; height: 2rem;" >
                         <option value="1">1</option>
