--- a/ARSHA-master/testportfolio/calculatorB.html
+++ b/ARSHA-master/testportfolio/calculatorB.html
@@ -11,7 +11,7 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <style>
         /* 7/6/01:15 */
-
+         /* clear button */
         body {
             background-color: rgba(174, 172, 2, 0.143);
             display: flex;
