--- a/ARSHA-master/testportfolio/calculatorA.html
+++ b/ARSHA-master/testportfolio/calculatorA.html
@@ -13,6 +13,8 @@
 
     <style>
         /* ?11/06 */
+
+          /* input dropdown retains last selected operator */
         body{
             background-color: aliceblue;
             position: relative;
