--- a/ARSHA-master/testportfolio/calculatorC.html
+++ b/ARSHA-master/testportfolio/calculatorC.html
@@ -14,6 +14,7 @@
     <style>
         /* 8/6  input dropdown*/
         /* 9/6 operator dropdown */
+        /* needs css editing  */
         body {
             background-color: aliceblue;
             position: relative;
